feat: Add new job experience and rack monitor posts with comprehensive styling and layout improvements.

--- a/hugo.toml
+++ b/hugo.toml
@@ -93,7 +93,7 @@ disqusShortname = "hugo-tranquilpeak-theme"
 # canonifyurls = true  # Disabled - causes localhost issues with absolute URLs
 
 [permalinks]
-  posts = "/:year/:month/:slug/"
+  posts = "/:slug/"
 
 [taxonomies]
   tag = "tags"
